--- a/starter/03-CSS-Fundamentals/codingChallenge.html
+++ b/starter/03-CSS-Fundamentals/codingChallenge.html
@@ -8,6 +8,8 @@
 <body>
     <article class="product">
         <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
+
+        <p class="sale">Sale</p>
         <img src="https://i.ibb.co/Jr7Wh1d/challenges.jpg" alt="Chuck Taylor All Star Shoe" height="250" width="250" />
 
         <p class="price"><strong>$65.00</strong></p>
@@ -15,6 +17,23 @@
         <p>Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe staple.</p>
 
         <a class="more-info" href="https://www.converse.com">More information &rarr;</a>
+
+        <div class="colors"></div>
+            <div class="color black"></div>
+            <div class="color color-blue"></div>
+            <div class="color color-red"></div>
+            <div class="color color-yellow"></div>
+            <div class="color color-green"></div>
+            <div class="color color-brown"></div>
+
+        <!--<nav class="box">
+            <div class="color-box black-box"></div>
+            <div class="color-box blue-box"></div>
+            <div class="color-box red-box"></div>
+            <div class="color-box yellow-box"></div>
+            <div class="color-box green-box"></div>
+            <div class="color-box brown-box"></div>
+        </nav>-->
 
         <h3 class="details-title">Product details</h3>
         <ul class="details-list">
