--- a/starter/04-CSS-Layouts/codingChallenge/codingChallenge.html
+++ b/starter/04-CSS-Layouts/codingChallenge/codingChallenge.html
@@ -8,7 +8,7 @@
 <body>
 <article class="product">
     <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-    <div class="container">
+    <!--<div class="container">-->
         <img
                 src="https://i.imgur.com/ZrTU3VK.jpeg"
                 alt="Chuck Taylor All Star Shoe"
@@ -47,7 +47,7 @@
                 <li>Iconic Chuck Taylor ankle patch.</li>
             </ul>
         </div>
-    </div>
+    <!--</div>-->
     <button class="add-cart">Add to cart</button>
 </article>
 
